(add): add all writing

--- a/paper/proceedings.tex
+++ b/paper/proceedings.tex
@@ -10,6 +10,8 @@
 \usepackage[T1]{fontenc}   % for umlauts and other diaeresis
 \usepackage{txfonts}
 \usepackage{mathptmx}
+% \usepackage{amsmath}
+% \usepackage{amsmath,amsfonts,amsthm} 
 \usepackage[pdflang={en-US},pdftex]{hyperref}
 \usepackage{color}
 \usepackage{booktabs}
