--- a/paper/outcomes.tex
+++ b/paper/outcomes.tex
@@ -1,31 +1,7 @@
 \subsection{Outcomes}
+As we analysed in section 3,  the participants significantly shows their reaction and well accepted this installation and significant t-test shows that the results of security, acceptance as well as privacy between daytime and nighttime group has no significant difference. Apparently, this user study contains few drawbacks, which might influence our results:
 
+\textbf{Single installation}: our windshield display installation are installed in a single car, we are not able to conclude that if the windshield displays are universally installed on all cars
+(pervasive), either the pedestrians still present their reactions on the installation or not.Ffortunately, if this installation are applied as an infrastructure in each car and ubiquitous exists as same as traffic light, people will pay more attention on the windshield display, which automatically eliminate this effect.
 
-\begin{table}
-  \small
-  \centering
-  \begin{tabular}{l l l l l l l}
-    % \toprule
-    & \multicolumn{3}{c}{\small{\textbf{Day Time}}} & \multicolumn{3}{c}{\small{\textbf{Night Time}}} \\
-               \cmidrule(r){2-7}
-    REACTION & {\small \textit{Avg.}} & {\small \textit{Med.}} & {\small \textit{SD}} & 
-      {\small \textit{Avg.}} & {\small \textit{Med.}} & {\small \textit{SD}} \\
-    \midrule
-    Interview & 223.0 & 44 & 432,321 & 223.0 & 44 & 432,321 \\
-    Observation & 22.2 & 16 & 234,333 & 223.0 & 44 & 432,321\\
-    % \bottomrule
-  \end{tabular}
-  \caption{Table captions should be placed below the table. We
-    recommend table lines be 1 point, 25\% black. Minimize use of
-    table grid lines.}~\label{tab:table1}
-\end{table}
-
-How many users showed a reaction?
-
-
-Summarize of the spread of values between subjects (-> standard deviation).
-What is the precision of the estimates of outcomes with confidence limits?
-
-Result statement 1 - Result discussion 1: observed moderate effect, but the true value of the effect could be anything between trivial and very strong.
-Result statement 2 - Result discussion 2
-...
+\textbf{Bright windshield at night}: our study conducts in two time slots (daytime and nighttime), 82.36\% of pedestrians aware the display among the daytime and nighttime. However, the windshield display becomes more bright in the night time. We have no evidence to proof that the nighttime participants showed their reaction due to the bright of windshield display. Nevertheless, considering if the windshield displays are universally installed on all cars (pervasive), the awareness of bright windshield display is as same as the daytime awareness.
